; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/spawn/extr_posix_spawn.c_posix_spawn_file_actions_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/spawn/extr_posix_spawn.c_posix_spawn_file_actions_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@PSF_ACTIONS_INIT_COUNT = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @posix_spawn_file_actions_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_2__**, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32* %5 to %struct.TYPE_2__**
  store %struct.TYPE_2__** %6, %struct.TYPE_2__*** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load i32, i32* @PSF_ACTIONS_INIT_COUNT, align 4
  %8 = call i32 @PSF_ACTIONS_SIZE(i32 %7)
  %9 = call i64 @malloc(i32 %8)
  %10 = inttoptr i64 %9 to %struct.TYPE_2__*
  %11 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %3, align 8
  store %struct.TYPE_2__* %10, %struct.TYPE_2__** %11, align 8
  %12 = icmp eq %struct.TYPE_2__* %10, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @ENOMEM, align 4
  store i32 %14, i32* %4, align 4
  br label %23

15:                                               ; preds = %1
  %16 = load i32, i32* @PSF_ACTIONS_INIT_COUNT, align 4
  %17 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %3, align 8
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  store i32 %16, i32* %19, align 8
  %20 = load %struct.TYPE_2__**, %struct.TYPE_2__*** %3, align 8
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  store i64 0, i64* %22, align 8
  br label %23

23:                                               ; preds = %15, %13
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @PSF_ACTIONS_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
